short structure update

--- a/Hausarbeit für Computational Statistics.ipynb
+++ b/Hausarbeit für Computational Statistics.ipynb
@@ -14,13 +14,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main purpose of this notebook is to showcase the strengh and weekness of different algorithms in classification tree. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "maybe add some structure here? (see if we got enough space)"
    ]
   },
@@ -147,11 +140,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## 1. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main purpose of this notebook is to showcase the strengh and weekness of different algorithms in classification tree, in particular, the decision making mechanism behind the splits between nodes. The motivation behind this attempt is to understand the\n",
+    "\n",
+    "\n",
+    "Two seperate DGPs with different characteristics will be utilised to help evaulate the algorithms. In total 3( if got time 4) will be discussed:\n",
+    "<ul>\n",
+    "    <li>Classification and Regression Trees (CART)</li>\n",
+    "    <li>C4.5</li>\n",
+    "    <li>Conditional Inference Trees (Ctree)</li>\n",
+    "</ul>\n",
+    "\n",
+    "The most straightforward algorithm for determining a split is the <em>Gini Index</em>, which is employed by CART. C4.5 uses the <em>Shannon Entropy </em>method which in some sense is simliar to Gini Index. Lastly, Ctree incoporates the <em>Chi-square test</em> to determine the split. In this notebook,  we will be using the rpart package for CART algorithm, rweka for J48, and finally partykit package for Ctree."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    <b>Additional Note:</b> The DGP functions are quite long, therefore I decided to import it from the repository. For the sake of transparency, please <a href=\"https://github.com/PoTseCheng/Computational-Statistic/blob/master/R%20codes/DGP.R\">click here</a> to evaluate the code. \n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Descriptive Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section we will be going through the two main DGP. The first one came from a recent paper Characteristics of COVID-19 infection in Beijing from Journal of Infection, while the second one is from Priced out, another paper published in Research in Higher Education. \n",
+    "\n",
+    "Below is a short summary from the original papers:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,7 +202,7 @@
    "source": [
     "<table><tr>\n",
     "<thead>\n",
-    " <tr><th>Description Statistic 1</th><th>Description Statistic 2</th></tr>   \n",
+    " <tr><th>Description Statistics 1</th><th>Description Statistics 2</th></tr>   \n",
     "</thead>\n",
     "    \n",
     "<tbody>\n",
@@ -171,31 +214,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "These two papers were intentially selected as there are a huge contrast in complexity "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "description regarding DGP here (including assumptions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Algorithm Evaluation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "show the data that we will be working with here"
    ]
   },
   {
@@ -360,8 +389,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SHIT REGARDING CART"
+    "It is clear that "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algorithm Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -421,11 +462,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "additional chapter (Cruise):\n",
+    "addition since the package is not avaliable in r, one must download the algorithm manually from the ... website."
+   ]
   },
   {
    "cell_type": "markdown",
