some more updates

--- a/Hausarbeit für Computational Statistics.ipynb
+++ b/Hausarbeit für Computational Statistics.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main purpose of this notebook is to showcase the strengh and weekness of different algorithms in classification tree, in particular, the decision making mechanism behind the splits between nodes. The motivation behind this attempt is to understand the\n",
+    "The main purpose of this notebook is to showcase the strengh and weekness of different algorithms in classification tree, in particular, the decision making mechanism behind the splits between nodes. The motivation behind this attempt is to understand each individual splitting methods more thoroughly, as within the courses\n",
     "\n",
     "\n",
     "Two seperate DGPs with different characteristics will be utilised to help evaulate the algorithms. In total 3( if got time 4) will be discussed:\n",
@@ -160,7 +160,7 @@
     "    <li>Conditional Inference Trees (Ctree)</li>\n",
     "</ul>\n",
     "\n",
-    "The most straightforward algorithm for determining a split is the <em>Gini Index</em>, which is employed by CART. C4.5 uses the <em>Shannon Entropy </em>method which in some sense is simliar to Gini Index. Lastly, Ctree incoporates the <em>Chi-square test</em> to determine the split. In this notebook,  we will be using the rpart package for CART algorithm, rweka for J48, and finally partykit package for Ctree."
+    "The most direct algorithm for determining a split is the <em>Gini Index</em>, which is employed by CART. C4.5 uses the <em>Shannon Entropy </em>method which in some sense is simliar to Gini Index. Lastly, Ctree incoporates the <em>Chi-square test</em> to determine the split. In this notebook,  we will be using the rpart package for CART algorithm, rweka for J48, and finally partykit package for Ctree. This notebook is also constructed in the following way: in the second chapter we will take a look at the two DGPs including personal assumptions and the mechanism of each algorithms. Section 3 is using the examples "
    ]
   },
   {
@@ -184,16 +184,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Descriptive Statistics"
+    "## 2. DGPs and Theoretical Perspectives"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section we will be going through the two main DGP. The first one came from a recent paper Characteristics of COVID-19 infection in Beijing from Journal of Infection, while the second one is from Priced out, another paper published in Research in Higher Education. \n",
+    "### 2.1. Data Generating Procedures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section we will be going through the two main DGPs: The first one came from Tian et al.(2020) from Journal of Infection, while the second one is from Jones-White et al.(2014) published in Research in Higher Education. The first paper analysed the symptoms of COVID-19 and the consequences of all 262 cases. Furthermore, the 262 cases were splitted into 2 subgroups by clinical perspective. The other paper aims to establish a connection between financial aids and students' college outcomes. \n",
     "\n",
-    "Below is a short summary from the original papers:"
+    "\n",
+    "Below is a short summary of data from the original papers:"
    ]
   },
   {
@@ -224,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description regarding DGP here (including assumptions)"
+    "Below are a portion of samples from our DGP. Showcase1 denotes"
    ]
   },
   {
@@ -389,7 +397,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is clear that "
+    "### 2.2. Mechanisms and Expectations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We expect that"
    ]
   },
   {
@@ -402,7 +439,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In this cha"
+   ]
   },
   {
    "cell_type": "code",
@@ -478,6 +517,8 @@
     "Jones-White, D. R., Radcliffe, P. M., Lorenz, L. M., & Soria, K. M. (2014). Priced out?. Research in Higher Education, 55(4), 329-350.\n",
     "\n",
     "Loh, W. Y. (2014). Classification and regression tree methods. Wiley StatsRef: Statistics Reference Online.\n",
+    "\n",
+    "Loh, W. Y., & Shih, Y. S. (1997). Split selection methods for classification trees. Statistica sinica, 815-840.\n",
     "\n",
     "Tian, S., Hu, N., Lou, J., Chen, K., Kang, X., Xiang, Z., ... & Chen, G. (2020). Characteristics of COVID-19 infection in Beijing. Journal of Infection."
    ]
