--- a/Hausarbeit für Computational Statistics.ipynb
+++ b/Hausarbeit für Computational Statistics.ipynb
@@ -160,7 +160,9 @@
     "    <li>Conditional Inference Trees (Ctree)</li>\n",
     "</ul>\n",
     "\n",
-    "The most direct algorithm for determining a split is the <em>Gini Index</em>, which is employed by CART. C4.5 uses the <em>Shannon Entropy </em>method which in some sense is simliar to Gini Index. Lastly, Ctree incoporates the <em>Chi-square test</em> to determine the split. In this notebook,  we will be using the rpart package for CART algorithm, rweka for J48, and finally partykit package for Ctree. This notebook is also constructed in the following way: in the second chapter we will take a look at the two DGPs including personal assumptions and the mechanism of each algorithms. Section 3 is using the examples "
+    "The most direct algorithm for determining a split is the <em>Gini Index</em>, which is employed by CART. C4.5 uses the <em>Shannon Entropy </em>method which in some sense is simliar to Gini Index. Lastly, Ctree incoporates the <em>Chi-square test</em> to determine the split. In this notebook,  we will be using the rpart package for CART algorithm, rweka for J48, and finally partykit package for Ctree. \n",
+    "\n",
+    "This notebook is also constructed in the following way: in the second chapter we will take a look at the two DGPs including personal assumptions and the mechanism of each algorithms. Section 3 is using the examples "
    ]
   },
   {
@@ -225,14 +227,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These two papers were intentially selected as there are a huge contrast in complexity "
+    "These two papers were intentially selected as there are a huge contrast in complexity \n",
+    "\n",
+    "\n",
+    "\n",
+    "Here are the assumptions and made regarding first DGP:\n",
+    "\n",
+    "<ol>\n",
+    "<li></li>\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "</ol>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are a portion of samples from our DGP. Showcase1 denotes"
+    "Below are a small portion of generated data from our DGP. Showcase1 denotes the samples from DGP1 and Showcase2 from DGP2."
    ]
   },
   {
